--- a/index.html
+++ b/index.html
@@ -133,64 +133,33 @@ ul {
 <h1> Willkommen</h1>
 
 
-	<h4> aktuelle Projekte</h4>
-<p id="rahmen">
-
-An welchen Themen arbeite ich momentan? 
-Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.
-	
-</p> 
-
-	<h4>Projektideen</h4>
-<p id="rahmen">
-
-Alles, was ich vielleicht einmal anschauen werde.
-	
-</p> 
-	<h4> Abgeschlossenes</h4>
-<p id="rahmen">
-	
-Welche Themen habe ich beendet oder beiseitegelegt?
-	
-</p> 
-	<h4> Anhäufung</h4>
-<p id="rahmen">
-
-Alle Links und Dokumente die ich irgend einmal anschauen möchte.
-	
-</p> 
-	
-<img id="rechts2" src="Bild.png" height="187" length="235.8">
-
-
 <div class="row">
   <div class="column">
     <h2>aktuelle Projekte</h2>
-    <p> An welchen Themen arbeite ich momentan? 
-	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen. </p>
-
+    <p>An welchen Themen arbeite ich momentan? 
+	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p>
+  </div>
   
   <div class="column">
     <h2>Projektideen</h2>
-    <p>Alles, was ich vielleicht einmal anschauen werde.</p>
+    <p>Alles, was ich vielleicht einmal anschauen werde.
+     <br/>
+     <br/>
+  
+        <br/>
+    </p>
   </div>
   
+  <div class="column">
+    <h2>Abgeschlossenes</h2>
+    <p>Welche Themen habe ich beendet oder beiseitegelegt?</p>
+  </div>
    <div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <h2>Anhäufung</h2>
+    <p>Alle Links und Dokumente die ich irgend einmal anschauen möchte.
+	</p>
   </div>
-   
- 	<div class="column">
-    <h2>Column</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
-  
 </div>
-	
-
-
-<br /> 
-
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
