--- a/anhäufung.html
+++ b/anhäufung.html
@@ -172,9 +172,6 @@ ul {
 		  <a class="nav-link" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
-		</li>
-		<li class="nav-item">
 			<a class="nav-link active" href="anhäufung.html">Anhäufung</a>
 		 </li>
 
@@ -191,12 +188,8 @@ ul {
 Sortierte Anhäufung von Informationen
 </p> 
 
-	
-<a href="https://daphnuk.github.io/MetzgereiDHF.html">MetzgereiDHF</a><br /> 
 
-<a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a><br /> 
-<a href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/</a><br /> 
-<a href="https://twitter.com/pegasusspiele/status/1447223647094120459?t=RPn8Onxz7yyYa-Ai-wyCbw&s=08">https://twitter.com/pegasusspiele/status/1447223647094120459?t=RPn8Onxz7yyYa-Ai-wyCbw&s=08</a><br /> 
+
 <a href="link">Text</a><br /> 
 <a href="link">Text</a><br /> 
 
@@ -213,8 +206,13 @@ Sortierte Anhäufung von Informationen
   	</td>
    
 	<td><a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a> </td>
-    
-	<td>Spili</td>
+    <a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a><br /> 
+
+	  
+	<td><a 
+	       href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/</a><br /> 
+
+	  </td>
   </tr>
 </table>
 	
