--- a/ideen.html
+++ b/ideen.html
@@ -176,9 +176,6 @@ ul {
 		  <a class="nav-link active" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
-		</li>
-		<li class="nav-item">
 			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
 		 
 	  </ul>
@@ -197,6 +194,10 @@ ul {
 Terra Preta!
 </p>
 
+
+	<p>
+Vielleicht hier so verworfene und abgeschlossene Dinge
+</p>
 
 
 <br /> 
