--- a/anhäufung.html
+++ b/anhäufung.html
@@ -180,18 +180,11 @@ ul {
 
 
 
-<h1 class='rotgruen' id="rahmen"> Willkommen</h1>
-
 <h3> Alle Ideen, Gedanken und Links</h3>
 
 <p id="rahmen">
 Sortierte Anhäufung von Informationen
 </p> 
-
-
-
-<a href="link">Text</a><br /> 
-<a href="link">Text</a><br /> 
 
 <table>
   <tr>
@@ -210,7 +203,7 @@ Sortierte Anhäufung von Informationen
 
 	  
 	<td><a 
-	       href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/</a><br /> 
+	       href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">Star Wars schauen</a><br /> 
 
 	  </td>
   </tr>
