--- a/anhäufung.html
+++ b/anhäufung.html
@@ -65,7 +65,7 @@
 
 		table{
 			border: 10px solid black;
-			background-color: yellow;
+			background-color: #19070B;
 		}
 		tr{
 			background-color: #CEF6F5;
@@ -182,9 +182,6 @@ ul {
 
 <h3> Alle Ideen, Gedanken und Links</h3>
 
-<p id="rahmen">
-Sortierte Anhäufung von Informationen
-</p> 
 
 <table>
   <tr>
