--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 400px 20px;
   cursor: pointer;
   transition-duration: 0.4s;
 }
@@ -174,7 +174,7 @@ body {
 </div>
 
 	
-	<button class="button button2">Fun</button>
+	<button class="button button2"> <a class="nav-link active" href="fun.html">Fun</a></button>
 
 	
 <!-- Optional JavaScript -->
