--- a/index.html
+++ b/index.html
@@ -117,10 +117,6 @@ body {
   cursor: pointer;
   transition-duration: 0.4s;
 }
-
-.button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}	
 	</style>
 
 </head>
@@ -174,7 +170,7 @@ body {
 </div>
 
 	
-	<button class="button button2"> <a class="nav-link active" href="fun.html">Fun</a></button>
+	<button class="button"> <a class="nav-link active" href="fun.html">Fun</a></button>
 
 	
 <!-- Optional JavaScript -->
