--- a/ideen.html
+++ b/ideen.html
@@ -191,11 +191,14 @@ ul {
 
 
 <p>
-Terra Preta!
+Terra Preta! </br>
+Gärtnerei draussen und drinnen </br>
+Kapitalismus </br>
+
 </p>
 
 
-	<p>
+	<p class="rechts2">
 Vielleicht hier so verworfene und abgeschlossene Dinge
 </p>
 
