--- a/ideen.html
+++ b/ideen.html
@@ -25,7 +25,7 @@
 			height: 150px;
 			background-color:#19070B;
 			padding: 10px;
-			margin-left: 20px;
+			margin-left: 50%;
 		}
 
 		body{
@@ -33,26 +33,6 @@
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
-
-		h1{
-			background-color:#CEF6F5;
-			padding-top:20px;
-			padding-bottom: 20px;
-			padding-left:50px ;
-			margin: 50px;
-			margin-bottom: 30px;
-		}
-		h3{
-			margin-left: 40px;
-		}
-
-		h4{
-			background-color: #0B3B2E;
-			padding: 10px;
-			margin-right: 50%;
-			margin-left: 10px;
-		}
-		
 
 		a:link{color:white;}
 		a:visited{color:white;}
