--- a/ideen.html
+++ b/ideen.html
@@ -25,7 +25,7 @@
 			height: 150px;
 			background-color:#19070B;
 			padding: 10px;
-			margin-left: 50%;
+			text-align: center;
 		}
 
 		body{
@@ -55,18 +55,6 @@
 			border: 1px dashed black;
 		}
 
-		#rahmen{
-			border: 2px solid black;
-		}
-
-		span{
-			font-size: 20px;
-		}
-
-		h1.rotgruen{
-			background-color: #ff6600;
-			color:#006600;
-		}
 
 		#box{
 			border:5px dotted red;
