--- a/index.html
+++ b/index.html
@@ -104,19 +104,7 @@ body {
     width: 100%;
   }	
 	
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 400px 200px;
-  cursor: pointer;
-  transition-duration: 0.4s;
-}
+
 	</style>
 
 </head>
@@ -136,6 +124,9 @@ body {
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
+		 </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="fun.html">Fun</a>
 		 </li>
 		 
 	  </ul>
@@ -170,7 +161,6 @@ body {
 </div>
 
 	
-	<button class="button"> <a class="nav-link active" href="fun.html">Fun</a></button>
 
 	
 <!-- Optional JavaScript -->
