--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
-			padding-left:50px ;
 			margin: 50px;
-			margin-bottom: 30px;
+			margin-top: 50px;
+           		width: 900px;
+           	 	text-align: center;
 		}
 		
 		h2{
