--- a/anhäufung.html
+++ b/anhäufung.html
@@ -106,10 +106,6 @@ ul {
 	  
 
 
-
-<h3> Alle Ideen, Gedanken und Links</h3>
-
-
 <table>
   <tr>
     <th>Job/Schule</th>
@@ -117,15 +113,15 @@ ul {
     <th>Spass</th>
   </tr>
   <tr>
+<!-- JOB/SCHULE -->
  	<td>
 	Abchreiber <br /> 
 	irgendwas anderes<br /> 
   	</td>
-   
+<!-- ERNSTES -->
 	<td><a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a> </td>
-    <a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a><br /> 
-
 	  
+<!-- SPASS -->
 	<td><a 
 	       href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">Star Wars schauen</a><br /> 
 
