--- a/anhäufung.html
+++ b/anhäufung.html
@@ -16,32 +16,14 @@
 <link href="faw/css/all.css" rel="stylesheet">
 
 	<style type="text/css">
-			p{
-			font-family:'Courier New', Courier, monospace;
-			font-size:15px ;
-			font-weight: 600;
-			color: #E0F8F1;
-			width:60%;
-			height: 150px;
-			background-color:#19070B;
-			padding: 10px;
-			margin-left: 20px;
-		}
-
+			
 		body{
 			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
-	
-		h3{
-			background-color: #0B3B2E;
-			padding: 10px;
-			margin-right: 50%;
-			margin-left: 10px;
-		}
-		
+
 
 		a:link{color:white;}
 		a:visited{color:white;}
@@ -55,6 +37,7 @@
 		table{
 			border: 10px solid black;
 			background-color: #19070B;
+			margin-top: 50px;
 		}
 		tr{
 			background-color: #CEF6F5;
