--- a/ideen.html
+++ b/ideen.html
@@ -163,7 +163,7 @@ Terra Preta! </br>
 Gärtnerei draussen und drinnen </br>
 Kapitalismus </br>
 Gschäftli</br>
-</br>
+Gemeinschaftsgarten </br>
 </br>
 </p>
 
