--- a/anhäufung.html
+++ b/anhäufung.html
@@ -36,7 +36,7 @@
 
 		table{
 			border: 10px solid black;
-			background-color: #19070B;
+			background-color: #0B0B61;
 			margin-top: 50px;
 		}
 		tr{
