--- a/anhäufung.html
+++ b/anhäufung.html
@@ -40,11 +40,11 @@
 			margin-top: 50px;
 		}
 		tr{
-			background-color: #CEF6F5;
+			background-color: #0B0B61;
 		}
 		td{
-			background-color: rgb(5, 200, 30);
-			border: 10px solid black;
+			background-color: #3B0B0B);
+			border: 1px solid black;
 		}
 
 	
