--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
-			margin: 50px;
-			margin-top: 50px;
-           		width: 900px;
-           	 	text-align: center;
+           		margin-top: 50px;
+           		width: 70%;
+           		text-align: center;
+           		margin: auto;
 		}
 		
 		h2{
@@ -80,7 +80,7 @@ ul {
 }
 
 body {
-  margin: 0;
+  margin: 70px;
 }
 
 
