--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ ul {
   background-color: black;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   }
 
@@ -80,7 +81,8 @@ ul {
 }
 
 body {
-  margin-top: 70px;
+  margin-top: 70px;	
+  margin:20px;
 }
 
 
