--- a/aktuell.html
+++ b/aktuell.html
@@ -3,13 +3,12 @@
     
 <head>
 	<title>
-	was läuft gerade
+	hier ist es
 	</title>
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -20,9 +19,9 @@
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
-			width:60%;
+			color: #E0F8F1;
 			height: 150px;
-			background-color:#660033;
+			background-color:#19070B;
 			padding: 10px;
 			margin-left: 20px;
 		}
@@ -34,29 +33,20 @@
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
-			padding-left:50px ;
-			border: 5px dashed black;
-			margin: 50px;
-			margin-bottom: 30px;
+           		margin-top: 50px;
+           		width: 70%;
+           		text-align: center;
+           		margin: auto;
 		}
-		h3{
-			margin-left: 40px;
-			padding: 16px;
- 			margin-top: 30px;
-		}
-
-		h4{
-			background-color: #336666;
-			padding: 10px;
-			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
-			margin-right: 50%;
-			margin-left: 10px;
-		}
+		
+		h2{
+			background-color: #0B3B2E;
+			padding: 15px;
+			margin-left: 20px;
+				}
 		
 
 		a:link{color:white;}
@@ -68,40 +58,8 @@
 		}
 
 
-		table{
-			border: 10px solid black;
-			background-color: yellow;
-		}
-		tr{
-			background-color: red;
-		}
-		td{
-			background-color: rgb(5, 200, 30);
-			border: 1px dashed black;
-		}
-
-		#rahmen{
-			border: 2px solid black;
-		}
-
-		span{
-			font-size: 20px;
-		}
-
-		h1.rotgruen{
-			background-color: #ff6600;
-			color:#006600;
-		}
-
-div{
-	position: absolute;
-	width:200px;
-	top:8px;
-	left: 10px;
-	padding: 5px;
-	padding-left: 20px;
+		
 }
-
 ul > li{color:saddlebrown}
 
 ul {
@@ -112,51 +70,49 @@ ul {
   background-color: black;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   }
-		
-		
-		#border{
-			border: 2px double brown;
-		}
-		#rechts{
-			position: absolute;
-			top:180px;
-			left: 1070px;
-		}
-		#rechts2{
-			position: absolute;
-			top:430px;
-			left: 1070px;
-		}
 
-		#tab{
-			left: 550px;
-			bottom: 180px;
-			position:relative;
-		}
 
-		#table{
-			right: 440px;
-			bottom: 0px;
-			position:relative;
-			width:50% ;
-		}
-			
+	
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin-top: 70px;	
+  margin-right: 20px;
+}
+
+
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width:33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:800px) {
+  .column {
+    width: 100%;
+  }	
+	
 
 	</style>
 
-
-
-	
-	
 </head>
 
 
-	
-	
-	
-	
 <body>
 
 		<ul class="nav nav-tabs justify-content-center">
@@ -170,35 +126,50 @@ ul {
 		  <a class="nav-link" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
+			<a class="nav-link " href="anhäufung.html">Anhäufung</a>
 		 </li>
-		 
 	  </ul>
 	  
 
-	  	
 
-<h3> Die aktuellen Projekte</h3>
 
-<p id="rahmen">
-Gebärdensprache lernen <br/>
+
+
+	
+	
+<div class="row">
+  <div class="column">
+    <h2>Job</h2>
+    <p> 
 Food waste <br/>
-Vereinssuche <br/>
-Musik <br/>
+	  </p>
+  </div>
+  
+  <div class="column">
+    <h2>Ernstes</h2>
+    <p>
+     <br/>
+    Gebärdensprache lernen <br/>
+     <br/>
 Politik <br/>
+  
 nutrition masterclass
-</p>  
+        <br/>
+    </p>
+	  
+  </div>
+  
+   <div class="column">
+    <h2>Spass</h2>
+    <p><br /> Musik <br/>Vereinssuche <br/>
+	</p>
+  </div>
+   
+</div>
 
+	
 
-
-
-
-
-<br /> 
-
-
-
-
+	
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
