--- a/ideen.html
+++ b/ideen.html
@@ -3,29 +3,27 @@
     
 <head>
 	<title>
-	alles ist interessant
+	hier ist es
 	</title>
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <link href="faw/css/all.css" rel="stylesheet">
 
 	<style type="text/css">
-			p{
+		p{
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
 			color: #E0F8F1;
-			width:60%;
 			height: 150px;
 			background-color:#19070B;
 			padding: 10px;
-			text-align: center;
+			margin-left: 20px;
 		}
 
 		body{
@@ -33,6 +31,23 @@
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
+
+		h1{
+			background-color:#CEF6F5;
+			padding-top:20px;
+			padding-bottom: 20px;
+           		margin-top: 50px;
+           		width: 70%;
+           		text-align: center;
+           		margin: auto;
+		}
+		
+		h2{
+			background-color: #0B3B2E;
+			padding: 15px;
+			margin-left: 20px;
+				}
+		
 
 		a:link{color:white;}
 		a:visited{color:white;}
@@ -43,45 +58,7 @@
 		}
 
 
-		table{
-			border: 10px solid black;
-			background-color: yellow;
-		}
-		tr{
-			background-color: red;
-		}
-		td{
-			background-color: rgb(5, 200, 30);
-			border: 1px dashed black;
-		}
-
-
-		#box{
-			border:5px dotted red;
-			font-size: 10px;
-			top: 8px;
-			left: 300px;
-			position:absolute;
-		}
-
-		#toll{
-			font-family: fantasy;
-			border: 4px solid black ;
-			color: black;
-			position: fixed;
-			right:20px ;
-			top: 8px;
-			left: 85%;
-			z-index: 2;
-		}
-
-div{
-	position: absolute;
-	width:200px;
-	top:8px;
-	left: 10px;
-	padding: 5px;
-	padding-left: 20px;
+		
 }
 ul > li{color:saddlebrown}
 
@@ -93,44 +70,49 @@ ul {
   background-color: black;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   }
-		#border{
-			border: 2px double brown;
-		}
-		#rechts{
-			position: absolute;
-			top:180px;
-			left: 1070px;
-		}
-		#rechts2{
-			position: absolute;
-			top:430px;
-			left: 1070px;
-		}
 
-		#tab{
-			left: 550px;
-			bottom: 180px;
-			position:relative;
-		}
 
-		#table{
-			right: 440px;
-			bottom: 0px;
-			position:relative;
-			width:50% ;
-		}
-		
+	
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin-top: 70px;	
+  margin-right: 20px;
+}
+
+
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width:33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:800px) {
+  .column {
+    width: 100%;
+  }	
+	
+
 	</style>
 
 </head>
 
 
-	
-	
-	
-	
 <body>
 
 		<ul class="nav nav-tabs justify-content-center">
@@ -138,50 +120,56 @@ ul {
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
+		  <a class="nav-link " href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
-		 
+			<a class="nav-link " href="anhäufung.html">Anhäufung</a>
+		 </li>
 	  </ul>
 	  
 
+
+
+
+
+	
+	
+<div class="row">
+  <div class="column">
+    <h2>Job</h2>
+    <p> 
+Food waste <br/>
+	  </p>
+  </div>
+  
+  <div class="column">
+    <h2>Ernstes</h2>
+    <p>
+     <br/>
+    Gebärdensprache lernen <br/>
+     <br/>
+Politik <br/>
+  
+nutrition masterclass
+        <br/>
+    </p>
+	  
+  </div>
+  
+   <div class="column">
+    <h2>Spass</h2>
+    <p><br /> Musik <br/>Vereinssuche <br/>
+	</p>
+  </div>
+   
+</div>
+
 	
 
-
-
-
-<h3> Ganz viele Ideen und Gedanken </h3>
-
-
-
-<p>
-Terra Preta! </br>
-Gärtnerei draussen und drinnen </br>
-Kapitalismus </br>
-Gschäftli</br>
-Gemeinschaftsgarten </br>
-</br>
-</p>
-
-
-	<p class="rechts2">
-Vielleicht hier so verworfene und abgeschlossene Dinge
-</p>
-
-
-<br /> 
-
-
-
-
-
-
-
-
+	
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
