--- a/ideen.html
+++ b/ideen.html
@@ -141,7 +141,14 @@ body {
   <div class="column">
     <h2>Job</h2>
     <p> 
-Food waste <br/>
+Food waste <br/>Terra Preta!
+Gärtnerei draussen und drinnen
+Kapitalismus
+Gschäftli
+Gemeinschaftsgarten
+
+Vielleicht hier so verworfene und abgeschlossene Dinge
+	
 	  </p>
   </div>
   
