--- a/ideen.html
+++ b/ideen.html
@@ -141,13 +141,8 @@ body {
   <div class="column">
     <h2>Job</h2>
     <p> 
-Food waste <br/>Terra Preta!
-Gärtnerei draussen und drinnen
-Kapitalismus
+<br/>
 Gschäftli
-Gemeinschaftsgarten
-
-Vielleicht hier so verworfene und abgeschlossene Dinge
 	
 	  </p>
   </div>
@@ -155,12 +150,10 @@ Vielleicht hier so verworfene und abgeschlossene Dinge
   <div class="column">
     <h2>Ernstes</h2>
     <p>
-     <br/>
-    Gebärdensprache lernen <br/>
-     <br/>
-Politik <br/>
-  
-nutrition masterclass
+	    Terra Preta <br/>
+    Gemeinschaftsgarten<br/>
+    Kapitalismus <br/>
+
         <br/>
     </p>
 	  
@@ -168,7 +161,9 @@ nutrition masterclass
   
    <div class="column">
     <h2>Spass</h2>
-    <p><br /> Musik <br/>Vereinssuche <br/>
+    <p>
+	    Gärtnerei draussen und drinnen <br /> 
+<br/>
 	</p>
   </div>
    
