--- a/ideen.html
+++ b/ideen.html
@@ -32,20 +32,12 @@
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
-		h1{
-			background-color:#CEF6F5;
-			padding-top:20px;
-			padding-bottom: 20px;
-           		margin-top: 50px;
-           		width: 70%;
-           		text-align: center;
-           		margin: auto;
-		}
 		
 		h2{
-			background-color: #0B3B2E;
+			background-color: #1B2A0A;
 			padding: 15px;
 			margin-left: 20px;
+			color:#E0F8EC;
 				}
 		
 
@@ -139,31 +131,30 @@ body {
 	
 <div class="row">
   <div class="column">
-    <h2>Job</h2>
-    <p> 
-<br/>
-Gschäftli
+   			<h2>Job</h2>
+    	<p> 
+		Gschäftli <br/>
 	
-	  </p>
+	</p>
   </div>
   
   <div class="column">
-    <h2>Ernstes</h2>
-    <p>
-	    Terra Preta <br/>
-    Gemeinschaftsgarten<br/>
-    Kapitalismus <br/>
+    			<h2>Ernstes</h2>
+   	<p>
+	    	Terra Preta <br/>
+    		Gemeinschaftsgarten <br/>
+    		Kapitalismus <br/>
 
-        <br/>
-    </p>
+        			<br/>
+    	</p>
 	  
   </div>
   
    <div class="column">
-    <h2>Spass</h2>
-    <p>
-	    Gärtnerei draussen und drinnen <br /> 
-<br/>
+    			<h2>Spass</h2>
+    	<p>
+	    	Gärtnerei draussen und drinnen <br/> 
+				<br/>
 	</p>
   </div>
    
