--- a/ideen.html
+++ b/ideen.html
@@ -16,34 +16,39 @@
 
 	<style type="text/css">
 		p{
-			font-family:'Courier New', Courier, monospace;
-			font-size:15px ;
-			font-weight: 600;
-			color: #E0F8F1;
-			height: 150px;
-			background-color:#19070B;
+			font-size:17px ;
+			color: #white;
+			height: 80%;
+			background-color: #2A0A12;
 			padding: 10px;
 			margin-left: 20px;
+            opacity: 1;
 		}
 
 		body{
-			background-color: #070B19;
-			color:black;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
+			background-color: #000000;
+			color:white;
+			font-family:Helvetica, Arial, sans-serif;
+            margin-top: 70px;	
+  			margin-right: 20px;
+            
 		}
 
 		
 		h2{
-			background-color: #1B2A0A;
+			background-color: #0B1907;
 			padding: 15px;
 			margin-left: 20px;
-			color:#E0F8EC;
+			color: white;
+            border-style: inset;
+            border-color: #01DFA5;
+         	font-size: 30px;
 				}
 		
 
 		a:link{color:white;}
 		a:visited{color:white;}
-		a:hover{background-color: #19070B;
+		a:hover{background-color: #0B1907;
 		color: aliceblue;
 		}
 		a:active{background-color: #0A2A12;
@@ -59,11 +64,12 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: #19070B;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  font-size: 20px;
   }
 
 
@@ -72,10 +78,6 @@ ul {
   box-sizing: border-box;
 }
 
-body {
-  margin-top: 70px;	
-  margin-right: 20px;
-}
 
 
 
@@ -144,7 +146,17 @@ body {
 	    	Terra Preta <br/>
     		Gemeinschaftsgarten <br/>
     		Kapitalismus <br/>
-
+	Terra Preta <br/>
+    		Gemeinschaftsgarten <br/>
+    		Kapitalismus <br/>	Terra Preta <br/>
+    		Gemeinschaftsgarten <br/>
+    		Kapitalismus <br/>
+            	Terra Preta <br/>
+    		Gemeinschaftsgarten <br/>
+    		Kapitalismus <br/>
+            	Terra Preta <br/>
+    		Gemeinschaftsgarten <br/>
+    		Kapitalismus <br/>
         			<br/>
     	</p>
 	  
