--- a/fun.html
+++ b/fun.html
@@ -5,7 +5,11 @@
 	<title>
 	hier ist es
 	</title>
-
+ <?PHP
+        echo shell_exec("python script.py");
+        ?>
+	
+	
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
