--- a/fun.html
+++ b/fun.html
@@ -5,9 +5,6 @@
 	<title>
 	hier ist es
 	</title>
- <?PHP
-        echo shell_exec("python script.py");
-        ?>
 	
 	
 <!-- Required meta tags -->
@@ -20,47 +17,53 @@
 
 	<style type="text/css">
 		p{
-			font-family:'Courier New', Courier, monospace;
-			font-size:15px ;
-			font-weight: 600;
-			color: #E0F8F1;
-			height: 150px;
-			background-color:#19070B;
+			font-size: 17px ;
+			color: white;
+			height: 80%;
+			background-color: #2A0A12;
 			padding: 10px;
 			margin-left: 20px;
+            opacity: 1;
 		}
 
 		body{
-			background-color: #070B19;
-			color:black;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
+			background-color: #000000;
+			color: white;
+			font-family:Helvetica, Arial, sans-serif;
+            		margin-top: 70px;	
+  			margin-right: 20px;
+            
 		}
 
 		h1{
 			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
-			padding-left:50px ;
-			margin: 50px;
-			margin-bottom: 30px;
+           		margin-top: 50px;
+           		width: 70%;
+           		text-align: center;
+           		margin: auto;
+			color: black;
 		}
 		
-		h2{
-			background-color: #0B3B2E;
+		h3{
+			background-color: blue;
 			padding: 15px;
 			margin-left: 20px;
+			color: white;
+            		border-style: dotted;
+            		border-color: #01DFA5;
+         		font-size: 30px;
 				}
 		
 
 		a:link{color:white;}
 		a:visited{color:white;}
-		a:hover{background-color: #19070B;
+		a:hover{background-color: #0B1907;
 		color: aliceblue;
 		}
 		a:active{background-color: #0A2A12;
 		}
-
-
 		
 }
 ul > li{color:saddlebrown}
@@ -70,20 +73,17 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: #19070B;
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
+  font-size: 20px;
   }
-
 
 	
 * {
   box-sizing: border-box;
-}
-
-body {
-  margin: 0;
 }
 
 
@@ -107,7 +107,10 @@ body {
   .column {
     width: 100%;
   }	
+	
+
 	</style>
+
 
 </head>
 
@@ -132,7 +135,7 @@ body {
 	  
 
 
-
+	<h3> Hello </h3>
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
