--- a/ideen.html
+++ b/ideen.html
@@ -146,7 +146,8 @@ ul {
 	    	Terra Preta <br/>
     		Gemeinschaftsgarten <br/>
     		Kapitalismus <br/>
-	
+		Kühlschrank richtig einräumen<br/>
+		
         			<br/>
     	</p>
 	  
@@ -156,7 +157,9 @@ ul {
     			<h2>Spass</h2>
     	<p>
 	    	Gärtnerei draussen und drinnen <br/> 
-				<br/>
+		
+		 <a href="ludo.html">LUDO</a>
+				<br/>g
 	</p>
   </div>
    
