--- a/ludo.html
+++ b/ludo.html
@@ -135,7 +135,8 @@ ul {
   <div class="column">
    			<h2>Job</h2>
     	<p> 
-		Gschäftli <br/>
+		LUDO:
+	    <a href="https://www.coopzeitung.ch/themen/familie/spiele-im-test/">Coop Spiele</a><br />  <br/>
 	
 	</p>
   </div>
