--- a/aktuell.html
+++ b/aktuell.html
@@ -160,6 +160,8 @@ nutrition masterclass
    <div class="column">
     <h2>Spass</h2>
     <p><br /> Musik <br/>Vereinssuche <br/>
+	    <a href="ludo.html">LUDO</a>
+	    
 	</p>
   </div>
    
