--- a/fun.html
+++ b/fun.html
@@ -132,8 +132,25 @@ ul {
 		 </li>
 		 
 	  </ul>
-	  
-
+	
+	
+	<?php	  
+$to_shuffle = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank"); $shuffled = shuffle($to_shuffle); $shuffled = $shuffled[0]; print_r($shuffled)
+	?>
+	
+	<?php
+  $input = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank");
+  $rand_keys = array_rand($input, 2);
+  echo $input[$rand_keys[0]] . "\n";
+  echo $input[$rand_keys[1]] . "\n";
+?>
+	
+	<?php
+$input = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank");
+$rand_keys = array_rand($input, 2);
+echo $input[$rand_keys[0]] . "\n";
+echo $input[$rand_keys[1]] . "\n";
+?>
 
 	<h3> Hello </h3>
 
