--- a/fun.html
+++ b/fun.html
@@ -154,6 +154,24 @@ echo $input[$rand_keys[1]] . "\n";
 
 	<h3> Hello </h3>
 
+	<?php
+$a=array("red","green","blue","yellow","brown");
+$random_keys=array_rand($a,3);
+echo $a[$random_keys[0]]."<br>";
+echo $a[$random_keys[1]]."<br>";
+echo $a[$random_keys[2]];
+?>
+
+	<p> <?php
+$a=array("red","green","blue","yellow","brown");
+$random_keys=array_rand($a,3);
+echo $a[$random_keys[0]]."<br>";
+echo $a[$random_keys[1]]."<br>";
+echo $a[$random_keys[2]];
+?>
+
+	</p>
+	
 	<p id="demo"></p>
 
 <script>
