--- a/fun.html
+++ b/fun.html
@@ -172,6 +172,12 @@ echo $a[$random_keys[2]];
 
 	</p>
 	
+	import random
+
+mylist = ["apple", "banana", "cherry"]
+
+print(random.choice(mylist))
+	
 	<p id="demo"></p>
 
 <script>
