--- a/ideen.html
+++ b/ideen.html
@@ -147,8 +147,9 @@ ul {
     		Gemeinschaftsgarten <br/>
     		Kapitalismus <br/>
 		Kühlschrank richtig einräumen<br/>
+		Brettspiel-App <br/>
 		
-        			<br/>
+        			
     	</p>
 	  
   </div>
