--- a/ideen.html
+++ b/ideen.html
@@ -148,6 +148,9 @@ ul {
     		Kapitalismus <br/>
 		Kühlschrank richtig einräumen<br/>
 		Brettspiel-App <br/>
+		Ernährungsberatung in einfache Grafiken <br/>
+		allgemein Dinge einfach übersichtlich ansammeln 
+		<br/>
 		
         			
     	</p>
