--- a/ideen.html
+++ b/ideen.html
@@ -151,6 +151,10 @@ ul {
 		Ernährungsberatung in einfache Grafiken <br/>
 		allgemein Dinge einfach übersichtlich ansammeln 
 		<br/>
+		Handyfreie Tage ? <br/>
+		Das Kapital lesen <br/>
+		etwas gründen, kreieren <br/>
+		Vorlesungen besuchen <br/>
 		
         			
     	</p>
@@ -161,6 +165,22 @@ ul {
     			<h2>Spass</h2>
     	<p>
 	    	Gärtnerei draussen und drinnen <br/> 
+		Konzert besuchen <br/>
+		Alleine Wandern <br/>
+		Reisen <br/>
+		Kreidesprüche, Sticker ? <br/>
+		Brettspielgruppe, Events <br/>
+		Musik machen <br/>
+		Vegane Restaurants besuchen <br/>
+		Politik ? <br/>
+		Queer Event besuchen <br/>
+		Selbstverteidigung <br/>
+		Casino <br/>
+		Griechisch lernen <br/>
+		Essays/Buch schreiben <br/>
+		Wohnmobil ? <br/>
+		Snowboarden <br/>
+		Sportverein oder so <br/>
 		
 		 
 				<br/>
