--- a/ideen.html
+++ b/ideen.html
@@ -136,7 +136,8 @@ ul {
    			<h2>Job</h2>
     	<p> 
 		Gschäftli <br/>
-	
+		Etsy <br/>
+		Schule; Zusammenfassungen <br/>
 	</p>
   </div>
   
@@ -155,6 +156,12 @@ ul {
 		Das Kapital lesen <br/>
 		etwas gründen, kreieren <br/>
 		Vorlesungen besuchen <br/>
+		Autofreier Verkehr fördern <br/>
+		Müll-Raum-Patenschaft <br/>
+		Ludo Flohmarkt? <br/>
+		ginto <br/>
+		Madame frigo <br/>
+		
 		
         			
     	</p>
