--- a/ideen.html
+++ b/ideen.html
@@ -135,7 +135,7 @@ ul {
   <div class="column">
    			<h2>Job</h2>
     	<p> 
-		Gschäftli <br/>
+		<a href="Lädeli.html">Gschäftli</a> <br/>
 		Etsy <br/>
 		Schule; Zusammenfassungen <br/>
 	</p>
