--- a/Lädeli.html
+++ b/Lädeli.html
@@ -133,20 +133,26 @@ ul {
 	
 <div class="row">
   <div class="column">
-   			<h2>Job</h2>
+   			<h2>Stationär</h2>
     	<p> 
 		Gschäftli <br/>
 	
-        Textmewhenyougethome
-        Barrierefrei
+        Textmewhenyougethome<br/>
+        Barrierefrei<br/>
+	Ort für Wissensaustausch <br/>
+	Veranstaltungen Ideen Brainstorming <br/>
+		Food waste <br/>
+		Brettspili <br/>
+		öffentliches WC <br/>
+		
 	</p>
   </div>
   
   <div class="column">
-    			<h2>Ernstes</h2>
+    			<h2>Online</h2>
    	<p>
 	  
-		
+	aktuelle Sitzplatzbelegung	
 		
         			
     	</p>
@@ -154,9 +160,9 @@ ul {
   </div>
   
    <div class="column">
-    			<h2>Spass</h2>
+    			<h2>Angebot</h2>
     	<p>
-
+	E
 		 
 				<br/>
 	</p>
