--- a/ludo.html
+++ b/ludo.html
@@ -133,7 +133,7 @@ ul {
 	
 <div class="row">
   <div class="column">
-   			<h2>Job</h2>
+   			<h2>Webseite</h2>
     	<p> 
 		LUDO:
 	    <a href="https://www.coopzeitung.ch/themen/familie/spiele-im-test/">Coop Spiele</a><br />  <br/>
@@ -142,28 +142,15 @@ ul {
   </div>
   
   <div class="column">
-    			<h2>Ernstes</h2>
+    			<h2>Vor Ort</h2>
    	<p>
-	    	Terra Preta <br/>
-    		Gemeinschaftsgarten <br/>
-    		Kapitalismus <br/>
-		Kühlschrank richtig einräumen<br/>
+	    
 		
         			<br/>
     	</p>
 	  
   </div>
   
-   <div class="column">
-    			<h2>Spass</h2>
-    	<p>
-	    	Gärtnerei draussen und drinnen <br/> 
-		
-		 <a href="ludo.html">LUDO</a>
-				<br/>g
-	</p>
-  </div>
-   
 </div>
 
 	
