--- a/ludo.html
+++ b/ludo.html
@@ -137,7 +137,7 @@ ul {
     	<p> 
 		LUDO:
 	    <a href="https://www.coopzeitung.ch/themen/familie/spiele-im-test/">Coop Spiele</a><br />  <br/>
-	
+	  <a href="https://www.ludothekprogramm.ch/download/category/anleitungen">Anleitung</a><br />  <br/> 
 	</p>
   </div>
   
