--- a/anhäufung.html
+++ b/anhäufung.html
@@ -134,13 +134,13 @@ body {
 
 <div class="row">
   <div class="column">
-    <h2>Job - Links</h2>
+    <h2>Job</h2>
     <p> 
 	  <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a> </p>
   </div>
   
   <div class="column">
-    <h2>Ernstes - Links</h2>
+    <h2>Ernstes</h2>
     <p><a href="http://kristallin.de/gesteine/index.htm#Anker1">GesteineKristallin</a>
      <br/>
      <a href="https://a.plant-for-the-planet.org/de/"> plantforplanet </a>
@@ -155,7 +155,7 @@ body {
   </div>
   
    <div class="column">
-    <h2>Spass - Links</h2>
+    <h2>Spass</h2>
     <p><a href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">Star Wars schauen</a><br /> 
 	   <a href="https://www.meineinsatz.so/polizeifunk">PolizeiPodcast</a><br />  <br/>  
 	     <a href="https://drive.google.com/drive/folders/1BmH8MSxob8jPZSbF359DQug_jOcqE12v?usp=sharing">Dokumente </a> </p>
