--- a/Lädeli.html
+++ b/Lädeli.html
@@ -144,7 +144,7 @@ ul {
 		Food waste <br/>
 		Brettspili <br/>
 		öffentliches WC <br/>
-		
+		unverpackte vegane Joghurts usw
 	</p>
   </div>
   
