--- a/Lädeli.html
+++ b/Lädeli.html
@@ -162,7 +162,7 @@ ul {
    <div class="column">
     			<h2>Angebot</h2>
     	<p>
-	E
+	Monatliche Schwerpunkte? plus Basisangebot
 		 
 				<br/>
 	</p>
