--- a/ideen.html
+++ b/ideen.html
@@ -163,6 +163,7 @@ ul {
 		Madame frigo <br/>
 		Recycling Wissen und so <br/>
 		Gefängnis Beschäftigung? <br/>
+		Selbstverteidigung lernen <br/> 
 		
         			
     	</p>
@@ -175,6 +176,7 @@ ul {
 	    	Gärtnerei draussen und drinnen <br/> 
 		Konzert besuchen <br/>
 		Alleine Wandern <br/>
+		Restuarant <br/>
 		Reisen <br/>
 		Kreidesprüche, Sticker ? <br/>
 		Brettspielgruppe, Events <br/>
@@ -190,7 +192,10 @@ ul {
 		Snowboarden <br/>
 		Sportverein oder so <br/>
 		STEINLI <br/>
-		
+		Philosophie Lesegruppe <br/>
+		Konzert <br/>
+		Ausflüge planen und durchführen <br/>
+		Zimmerpflanzen? Aussenpflanzen? <br/>
 		 
 				<br/>
 	</p>
