--- a/fun.html
+++ b/fun.html
@@ -111,6 +111,7 @@ ul {
 
 	</style>
 
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1KAY80W0Kjff39npv5iW4dY53-ff34uI&ehbc=2E312F" width="640" height="480"></iframe> 
 
 </head>
 
@@ -134,24 +135,6 @@ ul {
 	  </ul>
 	
 	<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1KAY80W0Kjff39npv5iW4dY53-ff34uI&ehbc=2E312F" width="640" height="480"></iframe>
-	
-	<?php	  
-$to_shuffle = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank"); $shuffled = shuffle($to_shuffle); $shuffled = $shuffled[0]; print_r($shuffled)
-	?>
-	
-	<?php
-  $input = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank");
-  $rand_keys = array_rand($input, 2);
-  echo $input[$rand_keys[0]] . "\n";
-  echo $input[$rand_keys[1]] . "\n";
-?>
-	
-	<?php
-$input = array("Neo", "Morpheus", "Trinity", "Cypher", "Tank");
-$rand_keys = array_rand($input, 2);
-echo $input[$rand_keys[0]] . "\n";
-echo $input[$rand_keys[1]] . "\n";
-?>
 
 	<h3> Hello </h3>
 
