--- a/Lädeli.html
+++ b/Lädeli.html
@@ -144,7 +144,8 @@ ul {
 		Food waste <br/>
 		Brettspili <br/>
 		öffentliches WC <br/>
-		unverpackte vegane Joghurts usw
+		unverpackte vegane Joghurts usw <br/> 
+alkoholfreii drinks
 	</p>
   </div>
   
