--- a/Lädeli.html
+++ b/Lädeli.html
@@ -145,7 +145,7 @@ ul {
 		Brettspili <br/>
 		öffentliches WC <br/>
 		unverpackte vegane Joghurts usw <br/> 
-alkoholfreii drinks
+alkoholfreii drinks <br/> Brunch
 	</p>
   </div>
   
