--- a/Lädeli.html
+++ b/Lädeli.html
@@ -102,7 +102,11 @@ ul {
   }	
 	
 table, th, td {
-  border:1px solid black;
+  border:1px solid white;
+	color: green;
+	width: 50%;
+	left: 50%;
+	
 }
 	
 	</style>
