--- a/Lädeli.html
+++ b/Lädeli.html
@@ -147,6 +147,8 @@ table, th, td {
 		öffentliches WC <br/>
 		unverpackte vegane Joghurts usw <br/> 
 alkoholfreii drinks <br/> Brunch
+
+Wie soll Warenauffüllungsprozess ablaufen? <br/>
 	</p>
   </div>
   
