--- a/Lädeli.html
+++ b/Lädeli.html
@@ -166,7 +166,12 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
    <div class="column">
     			<h2>Angebot</h2>
     	<p>
-	Monatliche Schwerpunkte? plus Basisangebot
+	Monatliche Schwerpunkte? plus Basisangebot <br/>
+	Fixes Angebot plus variables Angebot durch Food saving etc. <br/>
+	Warme und kalte Mahlzeiten, Snacks <br/>
+	Grundsortiment Food <br/>
+	Variables Frisches <br/>
+	 
 		 
 				<br/>
 	</p>
