--- a/Lädeli.html
+++ b/Lädeli.html
@@ -156,7 +156,11 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
     			<h2>Online</h2>
    	<p>
 	  
-	aktuelle Sitzplatzbelegung	
+	aktuelle Sitzplatzbelegung <br/>	
+	Bestand <br/>
+	Monatsthema <br/>
+	Kalender mit Terminen <br/>
+		
 		
         			
     	</p>
