--- a/rezepte.html
+++ b/rezepte.html
@@ -140,7 +140,8 @@ ul {
 
 Test 1: - 1 Banane <br/>
         - 75g gefrorene Himbeeren <br/>
-   - 200ml Milch
+   - 200ml Milch <br/>
+darf gerne etwas flüssiger sein
 	</p>
 	
 	import random
