--- a/Lädeli.html
+++ b/Lädeli.html
@@ -149,6 +149,7 @@ table, th, td {
 alkoholfreii drinks <br/> Brunch
 
 Wie soll Warenauffüllungsprozess ablaufen? <br/>
+		So Bockssack/Emotionsusglich
 	</p>
   </div>
   
