--- a/Lädeli.html
+++ b/Lädeli.html
@@ -97,8 +97,9 @@ ul {
 	
 table, th, td {
   border:1px solid white;
-	color: green;
-	width: 50%;
+	color: white;
+	background-color: blue;
+	width: 60%;
 	margin: auto;
 	
 }
