--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ ul {
 <div class="row">
   <div class="column">
     <h2> <a href="aktuell.html">Aktuelle Projekte</a> <br/></h2>
-    <p>An welchen Themen arbeite ich momentan? 
+    <p><a href="aktuell.html">Aktuelle Projekte</a> An welchen Themen arbeite ich momentan? 
 	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p>
   </div>
   
