--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ ul {
 
 <div class="row">
   <div class="column">
-    <h2> <a href="aktuell.html">Aktuelle Projekte</a> <br/></h2>
-    <p><a href="aktuell.html">Aktuelle Projekte</a> An welchen Themen arbeite ich momentan? 
-	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p>
+    <h2> <a href="aktuell.html"></a> <br/></h2>
+    <a href="aktuell.html"><p> An welchen Themen arbeite ich momentan? 
+	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p></a> 
   </div>
   
   <div class="column">
