--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ ul {
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
+		  <a class="nav-link" href="aktuell.html">Aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="ideen.html">Projektideen</a>
@@ -141,7 +141,7 @@ ul {
 
 <div class="row">
   <div class="column">
-    <h2> <a href="aktuell.html"></a> <br/></h2>
+    <h2> <a href="aktuell.html">Aktuelle Projekte</a> <br/></h2>
     <a href="aktuell.html"><p> An welchen Themen arbeite ich momentan? 
 	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p></a> 
   </div>
