--- a/fun.html
+++ b/fun.html
@@ -123,7 +123,7 @@ ul {
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
+		  <a class="nav-link" href="aktuell.html">Aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="ideen.html">Projektideen</a>
