--- a/ideen.html
+++ b/ideen.html
@@ -114,7 +114,7 @@ ul {
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link " href="aktuell.html">aktuelle Projekte</a>
+		  <a class="nav-link " href="aktuell.html">Aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="ideen.html">Projektideen</a>
