--- a/index.html
+++ b/index.html
@@ -141,25 +141,24 @@ ul {
 
 <div class="row">
   <div class="column">
-    <h2> <a href="aktuell.html">Aktuelle Projekte</a> <br/></h2>
+     <a href="aktuell.html"><h2>Aktuelle Projekte</h2></a> <br/>
     <a href="aktuell.html"><p> An welchen Themen arbeite ich momentan? 
 	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p></a> 
   </div>
   
   <div class="column">
-    <h2>Projektideen</h2>
-    <p>Alles, was ich vielleicht einmal anschauen werde.
+	  <a href="ideen.html">  <h2>Projektideen</h2></a>
+	  <a href="ideen.html"> <p>Alles, was ich vielleicht einmal anschauen werde.</p> </a>
      <br/>
      <br/>
   
         <br/>
-    </p>
+    
   </div>
   
    <div class="column">
-    <h2>Anhäufung</h2>
-    <p>Alle Links und Dokumente die ich irgend einmal anschauen möchte.
-	</p>
+	   <a href="anhäufung.html"> <h2>Anhäufung</h2> </a>
+   <a href="anhäufung.html"> <p>Alle Links und Dokumente die ich irgend einmal anschauen möchte.</p> </a> 
   </div>
 </div>
 
