--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ ul {
 
 <div class="row">
   <div class="column">
-     <a href="aktuell.html"><h2>Aktuelle Projekte</h2></a> <br/>
+     <a href="aktuell.html"><h2>Aktuelle Projekte</h2></a> 
     <a href="aktuell.html"><p> An welchen Themen arbeite ich momentan? 
 	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.</p></a> 
   </div>
