--- a/Lädeli.html
+++ b/Lädeli.html
@@ -170,7 +170,7 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
   </div>
   
    <div class="column">
-	   <h2><a href="Angebot.html">Angebot </a></h2>
+	   <h2><a href="Angebot.html" target="_blank">Angebot </a></h2>
     	<p>
 	Monatliche Schwerpunkte? plus Basisangebot <br/>
 	Fixes Angebot plus variables Angebot durch Food saving etc. <br/>
