--- a/Angebot.html
+++ b/Angebot.html
@@ -162,8 +162,17 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
   öffentliches WC <br/>
 	x <br/>
 	x <br/>
-		
-		
+	Getränke:	
+	<dl>
+  <dt>Smoothies</dt>
+  <dd>- black hot drink</dd>
+  <dt>Mocktails</dt>
+  <dd>- white cold drink</dd>
+		<dt>Mocktails</dt>
+  <dd>- white cold drink</dd>
+</dl>
+
+	  
         			
     	</p>
 	  
