--- a/Angebot.html
+++ b/Angebot.html
@@ -164,14 +164,12 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
 	x <br/>
 	Getränke:	
 
-  <dt>Smoothies</dt>
-  <dd>- black hot drink</dd>
-  <dt>Mocktails</dt>
-  <dd>- white cold drink</dd>
-		<dt>Mocktails</dt>
-  <dd>- white cold drink</dd>
-
-	  
+  <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>  
+  
         			
     	</p>
 	  
