--- a/Angebot.html
+++ b/Angebot.html
@@ -164,12 +164,11 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
 	x <br/>
 	Getränke:	
 
-  <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  
-  
+  Paragraph text goes here. And then the list:<br/>
+• list item<br/>
+• another list item<br/>
+• yet another<br/>
+Paragraph text continues here
         			
     	</p>
 	  
