--- a/Angebot.html
+++ b/Angebot.html
@@ -162,13 +162,25 @@ Wie soll Warenauffüllungsprozess ablaufen? <br/>
   öffentliches WC <br/>
 	x <br/>
 	x <br/>
-	Getränke:	
-
-  Paragraph text goes here. And then the list:<br/>
+	Getränke - Smoothies:<br/>
 • list item<br/>
 • another list item<br/>
 • yet another<br/>
-Paragraph text continues here
+Getränke - Mocktails: <br/>
+		• list item<br/>
+• another list item<br/>
+• yet another<br/>
+	Getränke - Warm: <br/>
+		• list item<br/>
+• another list item<br/>
+• yet another<br/>
+		
+Getränke - ehm: <br/>
+	• list item<br/>
+	• another list item<br/>
+	• yet another<br/>
+		
+			
         			
     	</p>
 	  
