--- a/Angebot.html
+++ b/Angebot.html
@@ -138,15 +138,19 @@ table, th, td {
    			<h2>Nahrungsmittel</h2>
     	<p> 
 		
-   
-		Food waste <br/>
-		Brettspili <br/>
-		
+   	Food Saved <br/>		
 		unverpackte vegane Joghurts usw <br/> 
 alkoholfreii drinks <br/> Brunch
-
-Wie soll Warenauffüllungsprozess ablaufen? <br/>
-	
+		
+	vegusto Produkte <br/>
+		
+	</p>
+  </div>
+  
+  <div class="column">
+    			<h2>Getränke</h2>
+   	<p>
+		
 		Getränke - Smoothies:<br/>
 • list item<br/>
 • another list item<br/>
@@ -164,12 +168,6 @@ Getränke - ehm: <br/>
 	• list item<br/>
 	• another list item<br/>
 	• yet another<br/>
-	</p>
-  </div>
-  
-  <div class="column">
-    			<h2>Dienstleistungen?</h2>
-   	<p>
 	    Textmewhenyougethome<br/>
         Barrierefrei<br/>
 	Ort für Wissensaustausch <br/>
@@ -188,7 +186,7 @@ Getränke - ehm: <br/>
   </div>
   
    <div class="column">
-    			<h2>Räumlichkeiten?</h2>
+    			<h2>Sonstiges</h2>
     	<p>
 	Events <br/>
 	Musik? <br/>
