--- a/Angebot.html
+++ b/Angebot.html
@@ -127,22 +127,29 @@ table, th, td {
 	  </ul>
 	  
 
-
-
-
-
-	
-	
 <div class="row">
   <div class="column">
    			<h2>Nahrungsmittel</h2>
     	<p> 
-		
-   	Food Saved <br/>		
+	
 		unverpackte vegane Joghurts usw <br/> 
 alkoholfreii drinks <br/> Brunch
 		
 	vegusto Produkte <br/>
+		
+		Frisches:<br/>
+• list item<br/>
+• another list item<br/>
+• yet another<br/>
+		Wechselnd: <br/>
+		• list item<br/>
+• another list item<br/>
+• yet another<br/>
+		Food saved: <br/>
+		• list item<br/>
+• another list item<br/>
+• yet another<br/>
+		
 		
 	</p>
   </div>
@@ -151,30 +158,25 @@ alkoholfreii drinks <br/> Brunch
     			<h2>Getränke</h2>
    	<p>
 		
-		Getränke - Smoothies:<br/>
+		Smoothies:<br/>
 • list item<br/>
 • another list item<br/>
 • yet another<br/>
-Getränke - Mocktails: <br/>
+		Mocktails: <br/>
 		• list item<br/>
 • another list item<br/>
 • yet another<br/>
-	Getränke - Warm: <br/>
+		Warm: <br/>
 		• list item<br/>
 • another list item<br/>
 • yet another<br/>
 		
-Getränke - ehm: <br/>
+		ehm: <br/>
 	• list item<br/>
 	• another list item<br/>
 	• yet another<br/>
-	    Textmewhenyougethome<br/>
-        Barrierefrei<br/>
-	Ort für Wissensaustausch <br/>
-	Veranstaltungen Ideen Brainstorming <br/>
-	Kartenzahlung <br/>	
-	Parkplatz <br/>
-  öffentliches WC <br/>
+		
+	 
 	x <br/>
 	x <br/>
 	
