--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 		}
 		a:active{background-color: #0A2A12;
 		}
-		a{ text-decoration: none; }
+		a:link{
+  text-decoration: none!important;
+}
 }
 ul > li{color:saddlebrown}
 
