--- a/rezepte.html
+++ b/rezepte.html
@@ -141,7 +141,13 @@ ul {
 Test 1: - 1 Banane <br/>
         - 75g gefrorene Himbeeren <br/>
    - 200ml Milch <br/>
-darf gerne etwas flüssiger sein
+darf gerne etwas flüssiger sein<br/><br/>
+	
+Test 2: <br/>
+	- 1 Banane <br/>
+	- 100g gefrorene Himbeeren <br/>
+	- 200ml Milch <br/>
+	- 150g Naturejoghurt <br/>
 	</p>
 
 
