--- a/rezepte.html
+++ b/rezepte.html
@@ -119,10 +119,10 @@ ul {
 
 		<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-		  <a class="nav-link active" href="index.html">Startseite</a>
+		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="aktuell.html">Aktuelle Projekte</a>
+		  <a class="nav-link active" href="aktuell.html">Aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="ideen.html">Projektideen</a>
