--- a/python.html
+++ b/python.html
@@ -7,6 +7,7 @@
         ?>
         </head>
     <body>  Hello world! <br>  This is the current date and time, as computed by Python:  <py-script>   
-        from datetime import datetime    now = datetime.now()    now.strftime(“%m/%d/%Y, %H:%M:%S”)  
+        from datetime import datetime    now = datetime.now()    now.strftime(“%m/%d/%Y, %H:%M:%S”)  <br/>
+        5+3
         </py-script></body>
 </html>
