--- a/ideen.html
+++ b/ideen.html
@@ -164,6 +164,8 @@ ul {
 		Recycling Wissen und so <br/>
 		Gefängnis Beschäftigung? <br/>
 		Selbstverteidigung lernen <br/> 
+		kleidertausch <br/> 
+		hügelbeete
 		
         			
     	</p>
