--- a/ideen.html
+++ b/ideen.html
@@ -175,31 +175,34 @@ ul {
    <div class="column">
     			<h2>Spass</h2>
     	<p>
-	    	Gärtnerei draussen und drinnen <br/> 
-		Konzert besuchen <br/>
-		Alleine Wandern <br/>
-		Restuarant <br/>
-		Reisen <br/>
-		Kreidesprüche, Sticker ? <br/>
-		Brettspielgruppe, Events <br/>
-		Musik machen <br/>
-		Vegane Restaurants besuchen <br/>
-		Politik ? <br/>
-		Queer Event besuchen <br/>
-		Selbstverteidigung <br/>
-		Casino <br/>
-		Griechisch lernen <br/>
-		Essays/Buch schreiben <br/>
-		Wohnmobil ? <br/>
-		Snowboarden <br/>
-		Sportverein oder so <br/>
-		STEINLI <br/>
-		Philosophie Lesegruppe <br/>
-		Konzert <br/>
-		Ausflüge planen und durchführen <br/>
-		Zimmerpflanzen? Aussenpflanzen? <br/>
-		 
-				<br/>
+	    	
+		<dl>
+  <dt>Soziales</dt>
+  <dd>Reisen</dd>
+  <dd>Brettspielgruppe, Events</dd>
+  <dd>Queer Event</dd>
+  <dd>Ausflüge planen</dd>
+  <dt>Bildung</dt>
+  <dd>Politik?</dd>
+  <dd>Griechisch lernen</dd>
+  <dd>Essays/Buch schreiben</dd>
+  <dd>Steinli</dd>
+  <dd>Philosophie Lesegruppe</dd>
+  <dt>Sport</dt>
+  <dd>Alleine Wandern</dd>
+  <dd>Selbstverteidigung</dd>
+  <dd>Snowboarden</dd>
+  <dd>Sportverein?</dd>
+  <dt>Sonstiges</dt>
+  <dd>Gärtnerei</dd>
+  <dd>Restaurant</dd>
+  <dd>Kreidesprüche, Sticker</dd>
+  <dd>Konzert besuchen</dd>
+  <dd>Musik machen</dd>
+  <dd>Casino</dd>
+  <dd>Wohnmobil</dd>
+</dl>
+
 	</p>
   </div>
    
