--- a/ideen.html
+++ b/ideen.html
@@ -18,13 +18,11 @@
 		p{
 			font-size:17px ;
 			color: #white;
-			height: 80%;
 			background-color: #2A0A12;
 			padding: 10px;
 			margin-left: 20px;
             opacity: 1;
 		}
-
 		body{
 			background-color: #000000;
 			color:white;
@@ -141,7 +139,7 @@ ul {
 	</p>
   </div>
   
-  <div class="column">
+  <div class="column" style="background-color:#bbb;">
     			<h2>Ernstes</h2>
    	<p>
 	    	Terra Preta <br/>
@@ -172,11 +170,11 @@ ul {
 	  
   </div>
   
-   <div class="column">
+ <div class="column">
     			<h2>Spass</h2>
-    	<p>
+    
 	    	
-		<dl>
+		
   <dt>Soziales</dt>
   <dd>Reisen</dd>
   <dd>Brettspielgruppe, Events</dd>
@@ -201,11 +199,9 @@ ul {
   <dd>Musik machen</dd>
   <dd>Casino</dd>
   <dd>Wohnmobil</dd>
-</dl>
 
-	</p>
-  </div>
-   
+	
+ </div>
 </div>
 
 	
