--- a/ideen.html
+++ b/ideen.html
@@ -139,7 +139,7 @@ ul {
 	</p>
   </div>
   
-  <div class="column" style="background-color:#bbb;">
+  <div class="column" style="background-color:#2ECCFA;">
     			<h2>Ernstes</h2>
    	<p>
 	    	Terra Preta <br/>
@@ -175,7 +175,11 @@ ul {
 		Ausdauer und Kraft<br/> 
 		Lesen<br/> 
 		Netzwerk erweitern<br/> 
-		
+		<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
         			
     	</p>
 	  
