--- a/Lädeli.html
+++ b/Lädeli.html
@@ -148,6 +148,8 @@ table, th, td {
 		öffentliches WC <br/>
 		unverpackte vegane Joghurts usw <br/> 
 alkoholfreii drinks <br/> Brunch
+		Secondhand Kleidung <br/>
+		Boxer?
 
 Wie soll Warenauffüllungsprozess ablaufen? <br/>
 		So Boxssack/Emotionsusglich
