--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 		h1{
 			background-color:#CEF6F5;
-			padding-top:20px;
+			padding-top:20px; 
+			font-family: serif;
 			padding-bottom: 20px;
            		margin-top: 50px;
            		width: 70%;
