--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		h1{
 			background-color:#CEF6F5;
 			padding-top:20px; 
-			font-family: serif;
+			font-family: Garamond;
 			padding-bottom: 20px;
            		margin-top: 50px;
            		width: 70%;
