--- a/anhäufung.html
+++ b/anhäufung.html
@@ -131,9 +131,19 @@ ul {
     <h2>Job</h2>
     <p> 
 	  <a href="https://drive.google.com/drive/folders/1a2fBXXUrjXOIgXhWJSpTS0RuD-if09t0?usp=sharing">Dokumente </a> </p>
- <a href="https://www.bio-inspecta.ch/de/home">bio inspecta </a> </div>
+ <a href="https://www.bio-inspecta.ch/de/home">bio inspecta </a> 
   
-  <div class="column">
+  </div>
+  
+  
+
+	
+	
+	
+	
+	
+	
+	<div class="column">
     <h2>Ernstes</h2>
     <p><a href="http://kristallin.de/gesteine/index.htm#Anker1">GesteineKristallin</a>
      <br/>
@@ -148,7 +158,16 @@ ul {
 	  
   </div>
   
-   <div class="column">
+  
+	
+	
+	
+	
+	
+	
+	
+	
+	<div class="column">
     <h2>Spass</h2>
     <p><a href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">Star Wars schauen</a><br /> 
 	   <a href="https://www.meineinsatz.so/polizeifunk">PolizeiPodcast</a><br />  <br/>  
